# grappolo

./: CMakeLists.txt  Makefile  Makefile-HDF5  Makefile.old  README.txt  README_cmake_build  convertFileToBinary.cpp  convertSNAPGroundTruthInformation.cpp  driverForClusterComparison.cpp  driverForColoring.cpp  driverForGenerating3DGrids.cpp  driverForGraphClustering.cpp  driverForGraphClusteringApprox.cpp  driverForGraphClusteringFastTrackResistance.cpp  driverForMatrixReordering.cpp  driverForMatrixReorderingND.cpp  driverForMatrixReorderingRcm.cpp  driverForPartitioningWithMetis.cpp  fewprimes.txt  init.sh  karate.graph  run1.sh
BasicCommunitiesDetection/: CMakeLists.txt  parallelLouvainMethod.cpp  parallelLouvainMethodNoMap.cpp  runMultiPhaseBasic.cpp  runMultiPhaseBasicApprox.cpp
Coloring/: CMakeLists.txt  coloringDistanceOne.cpp  parallelLouvainWithColoring.cpp  parallelLouvainWithColoringNoMap.cpp  runMultiPhaseColoring.cpp  vBase.cpp
DefineStructure/: basic_comm.h  basic_util.h  coloring.h  sync_comm.h  utilityClusteringFunctions.h  utilityNestedDisectionMetis.h
FullSyncOptimization/: CMakeLists.txt  fullSyncUtility.cpp  parallelLouvainMethodEarlyTerminate.cpp  parallelLouvainMethodFullSyncEarly.cpp  runMultiPhaseSyncType.cpp
InputsOutput/: CMakeLists.txt  loadBinary.cpp  loadDimacs.cpp  loadEdgeList.cpp  loadHDF5.cc  loadMatrixMarket.cpp  loadMetis.cpp  loadPajekFormat.cpp  loadSNAP.cpp  parseInputParameters.cpp  writeBinary.cpp  writeMatrixMarket.cpp  writeSimple.cpp
Utility/: CMakeLists.txt  buildNextPhase.cpp  reverseCuthillMcKee.cpp  utilityClusteringFunctions.cpp  utilityDataStructures.cpp  utilityFunctions.cpp  vertexFollowing.cpp
bColoring/: bBase.cpp  cBase.cpp  initialColoringLU.cpp  mBase.cpp  rBase.cpp  wBase.cpp
blosc_filter/: Makefile
gpu_graph/: CMakeLists.txt  aggregateCommunity.cu  assignGraph.cu  binWiseGaussSeidel.cu  commonconstants.h  communityGPU.cu  communityGPU.h  computeModularity.cu  computeTime.cu  coreutility.cu  devconstants.h  gatherInformation.cu  gpu_main.cpp  gpu_main.cpp_SAVED04Nov2018  graphGPU.cu  graphGPU.h  graphHOST.cpp  graphHOST.h  hashitem.h  hostconstants.h  independentKernels.cu  myutility.h  openaddressing.h  preprocessing.cu
oldFiles/: Makefile  buildNextPhase.cpp  coloringDistanceOne.cpp  convertFileToBinary.cpp  convertFileToEdgeList.cpp  defs.h  driverForGiniCoefficient.cpp  driverForGraphClustering.cpp  equitableColoringDistanceOne.cpp  louvainMultiPhaseRun.cpp  parallelLouvainMethod.cpp  parallelLouvainMethodNoMap.cpp  parallelLouvainWithColoring.cpp  parallelLouvainWithColoringNoMap.cpp  parseInputParameters.cpp  test1  utilityClusteringFunctions.cpp  utilityClusteringFunctions.h  writeGraphDimacsFormat.cpp
reserver/: convert  convertFileToBinary.cpp  parseInputFiles.cpp
